data/derived/comb/progs/unify/prog0219.ml.out
Characters 0-7:
  [1;2;3] * 10;;
  ^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
